aggiunti in ignore i js generati da ottimizzazione e compressione

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ application/config/development/facebook.php
 application/config/stage/facebook.php
 application/config/prod/facebook.php
 user_guide
+assets/js/all.js
+assets/js/extern
